# favie_api_schema

./: README.md  pyproject.toml
favie_api_schema/schemas/: __init__.py  common.py  image_search_schema.py  product_detail.py  rag_common.py  rag_evaluation.py  rag_query_rewrite.py  search_product_proxy_schema.py  search_proxy_schema.py
rag/: __init__.py  response.py
